image dragging behind issue

--- a/src/css/farm_designer.scss
+++ b/src/css/farm_designer.scss
@@ -232,7 +232,7 @@
     }
     image {
         transform: scale(1, 1);
-        transition: all 0.2s ease;
+        transition: transform 0.2s ease;
     }
     &:hover {
         image {
